<resources>
    <string name="app_name">hCueLite</string>
    <string name="action_settings">Settings</string>

    <!-- SETTINGS -->
    <string name="choose_landing">Choose your landing page option</string>
    <string name="my_calendar">My Calendar</string>
    <string name="my_appointment">My Appointment</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Enter your current Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="reenter_password">Re-enter New Password</string>
    <string name="change_password_caps">CHANGE PASSWORD</string>

    <!-- HELP -->
    <string name="help_header">For further support and help please \n see information below</string>
    <string name="customer_support">Customer Support</string>
    <string name="email">Email</string>
    <string name="support_mail">support@hcue.co</string>
    <string name="contact">Contact</string>

    <!-- ENTER NEW PATIENT -->
    <string name="patient_name">Enter Patient Name</string>
    <string name="patient_age">Enter Age</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Email">Email (Optional)</string>
    <string name="Address">Address (Optional)</string>
    <string name="Landmark">Landmark (Optional)</string>
    <string name="Book">BOOK</string>
</resources>
