<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_15">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_landing"
            android:textSize="@dimen/text_size_20" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@drawable/toggle_bg_sett"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_my_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/right_active_toggle"
                android:paddingLeft="@dimen/margin_10"
                android:paddingRight="@dimen/margin_10"
                android:text="@string/my_calendar"
                android:textSize="@dimen/text_size_15" />

            <Button
                android:id="@+id/btn_my_appointment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingLeft="@dimen/margin_10"
                android:paddingRight="@dimen/margin_10"
                android:text="@string/my_appointment"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_20"
            android:src="@drawable/hr_hori_pro" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textSize="@dimen/text_size_20" />


        <EditText
            android:id="@+id/edt_current_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/number_text_feild"
            android:gravity="center_vertical"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:maxEms="10"
            android:maxLength="32"
            android:padding="@dimen/margin_15"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edt_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/number_text_feild"
            android:gravity="center_vertical"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxEms="10"
            android:padding="@dimen/margin_15"
            android:maxLength="32"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edt_reenter_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/number_text_feild"
            android:gravity="center_vertical"
            android:hint="@string/reenter_password"
            android:inputType="textPassword"
            android:maxEms="10"
            android:maxLength="32"
            android:padding="@dimen/margin_15"
            android:singleLine="true" />

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/submit_btn"
            android:text="@string/change_password_caps"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_15" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:src="@drawable/hr_hori_pro" />
    </LinearLayout>


</LinearLayout>