<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edt_patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25"
        android:background="@drawable/number_text_feild"
        android:hint="@string/patient_name"
        android:maxLength="32"
        android:paddingLeft="@dimen/margin_20"
        android:maxEms="5"
        android:singleLine="true"
        android:textSize="@dimen/text_size_20" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_20">

        <EditText
            android:id="@+id/edt_patient_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/age_textfeild"
            android:hint="@string/patient_age"
            android:inputType="number"
            android:maxLength="3"
            android:paddingLeft="@dimen/margin_20"
            android:paddingRight="@dimen/margin_20"
            android:textSize="@dimen/text_size_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_15"
            android:text="years"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="@dimen/margin_25"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_25">

        <TextView
            android:id="@+id/tv_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/check_box_icon"
            android:drawablePadding="@dimen/margin_10"
            android:text="@string/Male"
            android:textSize="@dimen/text_size_20" />

        <TextView
            android:id="@+id/tv_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:drawableLeft="@drawable/un_check_box_icon"
            android:drawablePadding="@dimen/margin_10"
            android:text="@string/Female"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/number_text_feild"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:maxEms="5"
        android:paddingLeft="@dimen/margin_20"
        android:singleLine="true"
        android:textSize="@dimen/text_size_20" />

    <EditText
        android:id="@+id/edt_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/number_text_feild"
        android:hint="@string/Address"
        android:maxEms="5"
        android:paddingLeft="@dimen/margin_20"
        android:singleLine="true"
        android:textSize="@dimen/text_size_20" />

    <EditText
        android:id="@+id/edt_landmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/number_text_feild"
        android:hint="@string/Landmark"
        android:maxEms="5"
        android:paddingLeft="@dimen/margin_20"
        android:singleLine="true"
        android:textSize="@dimen/text_size_20" />

    <TextView
        android:id="@+id/tv_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40"
        android:background="@drawable/submit_btn"
        android:gravity="center"
        android:paddingLeft="@dimen/margin_20"
        android:text="@string/Book"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_20" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-250dp"
        >

        <include
            android:visibility="gone"
            android:id="@+id/llpatient_details_action"
            layout="@layout/patient_details_actions" />
    </FrameLayout>
</LinearLayout>