<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_15">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/help_header"
        android:textSize="@dimen/text_size_20" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        android:src="@drawable/hr_hori_pro" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_25"
        android:text="@string/customer_support"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/text_size_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_support_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/support_mail"
            android:textColor="#359979"
            android:textSize="@dimen/text_size_20" />

        <TextView
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/send_icon_help"
            android:gravity="center"
            android:text="SEND"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_15" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        android:src="@drawable/hr_hori_pro" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textSize="@dimen/text_size_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+91 95432 79999"
            android:textColor="#359979"
            android:textSize="@dimen/text_size_20" />

        <TextView
            android:id="@+id/btn_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/send_icon_help"
            android:gravity="center"
            android:text="CALL"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_15" />

    </LinearLayout>
</LinearLayout>